# ui

./: .cursorrules  .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  dev.py  dev.sh  llms.txt  pyproject.toml  rxconfig.py
.github/workflows/: deploy.yml  development.yml  validate-assets.yml
app/: app.py  export.py  hooks.py
app/engine/: actions.py  seed.py  url_sync.py
app/examples/: components.py  utils.py
app/pages/: blocks.py  charts.py  components.py  landing.py
app/registry/: colors.py  components.py  fonts.py  radii.py  styles.py  themes.py
app/templates/: compiler.py  config.py  docpage.py  docsidebar.py  footer.py  layout.py  mainpage.py  navbar.py  options.py  preview.py  reset.py  searchbar.py  sidebar.py  toc.py  utils.py  welcome.py
app/utils/: metatags.py  routes.py
app/www/: anatomy.py  constants.py  frontmatter.py  generator.py  parser.py  style.py  wrapper.py
assets/: globals.css  llms.txt  sitemap.xml
assets/fuse/: fuse-init.js  fuse.js  searchFunction.js  searchList.json
assets/prism/: prism.css  prism.js
cli/: README.md  main.py  scrollbar_css.py  shimmer_css.py  tailwind_config.py
components/charts/: chart_tooltip.py
components/icons/: hugeicon.py  others.py
components/ui/: accordion.py  attachment.py  autocomplete.py  avatar.py  badge.py  base_ui.py  breadcrumb.py  bubble.py  button.py  card.py  checkbox.py  collapsible.py  component.py  context_menu.py  dialog.py  field.py  frame.py  heatmap.py  input.py  input_group.py  kanban.py  link.py  marker.py  menu.py  message.py  message_scroller.py  metric.py  popover.py  scroll_area.py  select.py  skeleton.py  slider.py  spinner.py  switch.py  table.py  tabs.py  textarea.py  timeline.py  toggle.py  toggle_group.py  (+1 more)
docs/charts/: area_chart.md  bar_chart.md  doughnut_chart.md  line_chart.md  pie_chart.md  radar_chart.md  scatter_chart.md
docs/components/: accordion.md  attachment.md  autocomplete.md  avatar.md  badge.md  breadcrumb.md  bubble.md  button.md  chart.md  checkbox.md  collapsible.md  context_menu.md  dialog.md  field.md  frame.md  heatmap.md  input.md  input_group.md  kanban.md  kbd.md  link.md  marker.md  menu.md  message.md  popover.md  scroll_area.md  select.md  skeleton.md  slider.md  spinner.md  tabs.md  textarea.md  timeline.md  toggle.md  toggle_group.md  tooltip.md  typography.md
reflex.lock/: package.json
scripts/: create_md_files.py  generate_llms.py  generate_preview_cards.py  generate_search_index.py  generate_sitemap.py  metatags.py
skills/: buridan-support.skill
tests/: test_generated_assets.py
(+80 files in other folders)
