[project]
name = "buridan-create"
version = "0.1.19"
description = "A command line interface (CLI) for adding components and themes to your project."
requires-python = ">=3.11"
dependencies = []

readme = "cli/README.md"
license = "MIT"

authors = [
    { name = "LineIndent", email = "line.indent@gmail.com" }
]

keywords = [
    "cli",
    "ui",
    "design-system",
    "reflex",
    "components",
    "tailwind",
    "base-ui"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators"
]

[project.urls]
Homepage = "https://github.com/LineIndent/ui"
Repository = "https://github.com/LineIndent/ui"
Issues = "https://github.com/LineIndent/ui/issues"

[dependency-groups]
dev = [
    "reflex==0.9.6",
    "reflex-hosting-cli>=0.1.67",
    "reflex-components-internal",
    "pillow>=12.2.0",
    "PyYAML>=6.0.3",
    "questionary>=2.1.1",
    "pytest>=9.1.1",
]

[tool.uv]
prerelease = "allow"

[project.scripts]
buridan = "cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "cli", "components"]
